# LocalPass

./: README.md  data.json  lpm.bat  lpm.py  package-lock.json  package.json
concept/: concept.txt  passwords.txt
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  data.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
